Fix layout issues

--- a/src/components/search/Search.css
+++ b/src/components/search/Search.css
@@ -6,20 +6,38 @@
 .generic-search-container {
     display: flex;
     flex-wrap: wrap;
-    flex-direction: row;
-    overflow: auto;
+    flex-direction: column;
+    overflow: auto;    
 }
 
 .generic-search-panel {
     min-width: 500px;
     flex: 0 0 100%;
-    height: 150px;
+    height: 200px;
     align-items: left;
 }
 
 .generic-search-results-panel {
-    min-width: 800px;
+    min-width: 800px;    
     flex: 0 0 100%;
-    height: 150px;
+    height: 200px;
     overflow: auto;
 }
+
+.generic-search-container-description{
+    width: 80vw;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 30px;
+    margin-bottom: 30px;
+    /* border: 3px solid dimgray; */
+    fill-opacity: 100%;
+    /* fill: grey; */
+    border-radius: 10px;
+    /* background-color: rgba(128,128,128, 0.8); */
+    display: flex;
+    flex: 1;
+    flex-direction: column;
+    /* justify-content: center; */
+    align-items: left;
+  }
